<resources>
    <string name="app_name">StreetEfficient</string>

    <string name="box_icon">BOX ICON</string>
    <string name="add_item">Add Item</string>
    <string name="not_reviewed">• Not Reviewed</string>
    <string name="reviewed">• Reviewed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_list">My List</string>
    <string name="performance">PERFORMANCE</string>
    <string name="profile">Profile</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="set_password">SET PASSWORD</string>
    <string name="splash_image">splash image</string>
    <string name="receiver">TO:</string>
    <string name="fab_second_option">fab_second_option</string>
    <string name="fab_main_option">fab_main_option</string>
    <string name="fab_first_option">fab_first_option</string>
    <string name="finish_review">Finish Review</string>
    <string name="unlock_pin">Unlock Pin</string>
    <string name="sequence_route">Sequence Route</string>
    <string name="sequencing_route">SEQUENCING ROUTE…</string>
    <string name="you_have_arrived_at">YOU HAVE ARRIVED</string>
    <string name="item_successfully_delivered">ITEM SUCCESSFULLY DELIVERED</string>
    <string name="item_unsuccessfully_delivered">ITEM UNSUCCESSFULLY DELIVERED</string>
    <string name="message_customer">MESSAGE CUSTOMER</string>
    <string name="eta">Estimated Time of Arrival: </string>
    <string name="ata">Actual Time Of Arrival: </string>
    <string name="speed">Speed: </string>
    <string name="call_customer">CALL CUSTOMER</string>
    <string name="address">Address: </string>
    <string name="estimated_trip_duration">Estimated Trip Duration: </string>
    <string name="your_next_destination">YOUR NEXT DESTINATION</string>
    <string name="cod">COD: </string>
    <string name="start_route">START ROUTE</string>
    <string name="arrived">ARRIVED</string>
    <string name="note_press_start_route_when_you_are_seated_in_your_vehicle_and_ready_to_depart">NOTE: PRESS START ROUTE WHEN YOU ARE SEATED IN YOUR VEHICLE AND READY TO DEPART</string>
    <string name="mapicon">map icon</string>
    <string name="getting_location">… Please Wait …</string>
    <string name="check_mark">check_mark</string>
    <string name="dismiss">dismiss</string>
    <string name="recalibrate_address">Recalibrate Address</string>
    <string name="delivery_summary">DELIVERY SUMMARY</string>
    <string name="total_no_of_orders">Total Orders: </string>
    <string name="total_delivery_time">Total Delivery Time: </string>
    <string name="average_speed">Average Speed: </string>
    <string name="finish">FINISH</string>
    <string name="score_breakdown">SCORE SUMMARY</string>
    <string name="route_id">Route ID: </string>
    <string name="origin">Origin: </string>
    <string name="destination">Destination:</string>
    <string name="score">SCORE</string>
    <string name="time">TIME: </string>
    <string name="total_score">Total Score: </string>
    <string name="score_speed">SCORE SPEED: </string>
    <string name="score_time">SCORE TIME: </string>
    <string name="distance_travelled">Distance: </string>
    <string name="total_distance">Total Distance:</string>
    <string name="actual_delivery_sequence">Actual Delivery Sequence: </string>
    <string name="expected_delivery_sequence">Expected Delivery Sequence: </string>
    <string name="overall_performance_score">Overall Performance Score: </string>
    <string name="follows_route">Follows Route: </string>
    <string name="delivery_history">Delivery History</string>
    <string name="scores">Score: </string>
    <string name="select_date_of_delivery"><u>(SELECT DATE OF DELIVERY)</u></string>
    <string name="date">Date:</string>
    <string name="profiles">PROFILE</string>
    <string name="name">Name:</string>
    <string name="birthday">Birthday:</string>
    <string name="gender">Gender:</string>
    <string name="contact">Contact:</string>
    <string name="emergency_contact_number">Emergency Contact Number:</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="item_s_to_be_added">Item(s) to be Added</string>
    <string name="total_items">TOTAL ITEMS:</string>
    <string name="total_weight">TOTAL WEIGHT:</string>
    <string name="itinerary">ITINERARY</string>
    <string name="delete">DELETE</string>
    <string name="warning">WARNING</string>
    <string name="this_address_is_not_the_next_destination_of_your_current_delivery_route">This address is not the next destination of your current delivery route.</string>
    <string name="would_you_like_to_continue">Would you like to continue?</string>
    <string name="yes">yes</string>
    <string name="no">NO</string>
    <string name="this_will_affect_your_performance_score">(This will affect your performance score)</string>
    <string name="mycontinue">CONTINUE</string>
    <string name="re_enter_password">RE-ENTER PASSWORD</string>
    <string name="please_enter_a_new_password">PLEASE ENTER A NEW PASSWORD</string>
    <string name="signature">SIGNATURE</string>
    <string name="clear">clear</string>
    <string name="erase">erase</string>
    <string name="collapse_expand">collapse/expand</string>
    <string name="time_started">Time Started:</string>
    <string name="time_ended">Time Ended:</string>
    <string name="did_not_arrive_at_location">** Did Not Arrive at Location **</string>
    <string name="show_documents">Show Documents</string>
    <string name="logout">LOGOUT</string>
</resources>