<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".fragments.BreakdownFragment">

    <TextView
        android:id="@+id/breakdown_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/route_id" />

    <TextView
        android:id="@+id/breakdown_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/origin" />

    <TextView
        android:id="@+id/breakdown_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/destination" />

    <TextView
        android:id="@+id/breakdown_eta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/eta" />

    <TextView
        android:id="@+id/breakdown_ata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/ata" />

    <TextView
        android:id="@+id/breakdown_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/distance_travelled" />

    <TextView
        android:id="@+id/breakdown_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/speed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/score" />

    <TextView
        android:id="@+id/breakdown_score_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:padding="2dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/breakdown_score_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:padding="2dp"
        android:text="@string/speed" />

    <TextView
        android:id="@+id/breakdown_score_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:padding="2dp"
        android:text="@string/total_score" />

    <TextView
        android:id="@+id/breakdown_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/did_not_arrive_at_location"
        android:textColor="#FF0000"
        android:textStyle="italic"
        android:visibility="invisible" />

</LinearLayout>