<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/your_next_destination"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_route" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/popup_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/popup_eta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/eta" />

        <TextView
            android:id="@+id/popup_etd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/estimated_trip_duration" />

        <TextView
            android:visibility="gone"
            android:id="@+id/popup_cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cod" />

        <Button
            android:id="@+id/popup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/dismiss"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />

    </LinearLayout>

</LinearLayout>