<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:padding="8dp"
        android:text="@string/profiles"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/profile_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:text="@string/birthday" />

    <TextView
        android:id="@+id/profile_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/profile_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/profile_emergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:text="@string/emergency_contact_number" />

    <TextView
        android:id="@+id/profile_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:padding="8dp"
        android:text="@string/address" />

    <TextView
        android:id="@+id/profile_documents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="Show Documents"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_dossier" />

</LinearLayout>