<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/diag_round_red"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_warning" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_address_is_not_the_next_destination_of_your_current_delivery_route"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/would_you_like_to_continue"
        android:textAlignment="center" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/this_will_affect_your_performance_score"
        android:textAlignment="center"
        android:textStyle="italic" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/not_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/mycontinue" />


        <Button
            android:id="@+id/not_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight=".5"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/no" />

    </LinearLayout>


</LinearLayout>