<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".fragments.PerformanceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_background"
            android:padding="8dp"
            android:text="@string/performance"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/performance_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/overall_performance_score" />

        <TextView
            android:id="@+id/performance_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/average_speed" />

        <TextView
            android:id="@+id/performance_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/follows_route" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/delivery_history"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/performance_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/select_date_of_delivery"
            android:textColor="#0000FF"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/performance_header_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:visibility="gone" />

        <TextView
            android:id="@+id/performance_header_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/total_delivery_time"
            android:visibility="gone" />

        <TextView
            android:id="@+id/performance_header_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/average_speed"
            android:visibility="gone" />

        <TextView
            android:id="@+id/performance_header_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@color/white"
            android:padding="8dp"
            android:text="@string/scores"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="8dp"
            android:id="@+id/performance_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>