<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/itinerary"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_destination" />

    <TextView
        android:id="@+id/itinerary_locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/itinerary_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:text="@string/total_delivery_time"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/itinerary_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/start_route"
        android:textColor="@color/white"
        app:cornerRadius="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/note_press_start_route_when_you_are_seated_in_your_vehicle_and_ready_to_depart"
        android:textAlignment="center"
        android:textStyle="italic" />

</LinearLayout>