<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical"
    tools:context=".FinishedRoute">

    <TextView
        android:id="@+id/finished_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:padding="8dp"
        android:text="@string/delivery_summary"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/finished_orders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/total_no_of_orders" />

            <TextView
                android:id="@+id/finished_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/total_delivery_time" />

            <TextView
                android:id="@+id/finished_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/total_distance" />

            <TextView
                android:id="@+id/finished_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/average_speed" />

            <TextView
                android:id="@+id/finished_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/total_score" />


            <TextView
                android:id="@+id/finished_expected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/expected_delivery_sequence" />

            <TextView
                android:id="@+id/finished_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/white"
                android:padding="6dp"
                android:text="@string/actual_delivery_sequence" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score_breakdown"
                    android:textColor="@color/black" />


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:elevation="8dp"
                    app:contentPadding="8dp">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/arrow_back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                        <com.capstone.streetefficient.widgets.WrapViewPager
                            android:id="@+id/finish_pager"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        
                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/finish_tabs"
                            android:layout_alignParentBottom="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:tabBackground="@drawable/tab_selector"
                            app:tabGravity="center"
                            app:tabIndicatorHeight="0dp"/>

                        <ImageView
                            android:id="@+id/arrow_forward"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/finish_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finish" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>

